tests/NormalTests/paczka1/small_fuzzy/46936630.err
Error in line 4: DwhK S411 -1,1
Error in line 6: IhkkK S411 10,1
Error in line 1: DwhK S411 85,5
Error in line 11: IhkkK A840 92,5
